# portfolio-transformers

./: .gitattributes  .gitignore  EncoderAttention.drawio  README.md  dual_path_architecture.md  model_documentation.md  plots.ipynb  pyproject.toml  transformers.drawio
benchmark/: fama_french.ipynb  fama_french_benchmark.ipynb  fama_french_benchmark.py  ft_hpt.py  ft_transformer_benchmark.ipynb  mlp_benchmark.py  tree_benchmark.ipynb  tree_benchmark.py
data-notebooks/: data_processing.ipynb  data_processing.py  data_summary_validation.ipynb
drawio/: dualpath-transformer.drawio
hyperparameters-tuning/: embeding_varients.py  nonlinear_transformer_tuning.ipynb
notebooks/: attention_analysis.ipynb  country_analysis.ipynb  csv_parquet.py  csv_to_parquet.ipynb  data_processing.ipynb  ft_transformer_benchmark.ipynb  non_linear_transformer.ipynb  training_time_estimator.ipynb
results/transformer-hpt/: all_trials_summary.csv  best_params_fourier.json  best_params_linear.json  (+14 more)
results_1347-06052026/: metrics_per_feature.json  metrics_periodic.json  weights_linear.pt  weights_periodic.pt  weights_ple.pt
results_1530-06052026/: metrics_linear.json  metrics_periodic.json  metrics_ple.json  weights_per_feature.pt  weights_periodic.pt
slurm-scripts/: slurm_expanding.sh  slurm_rolling.sh  slurm_static.sh
src/: configuration.py  eval_dual_path.py  main.py  nonlinear_dualapproach.py  nonlinear_transformer.py  nonlinear_transformer_expanding.py  nonlinear_transformer_rolling.py  portfolio_transformer.py  training.py  transformer_architecture.py  transformer_components.py
(+61 files in other folders)
